--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: none
+os:
+  - linux
+  - osx
 dist: trusty
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq colordiff
-  - sudo apt-get install -qq devscripts
-  - sudo apt-get install -qq debhelper
+addons:
+  apt:
+    packages:
+    - faketime
+    - colordiff
+    - devscripts
+install:
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew install libfaketime; fi
 script: ./test/run-tests.sh && sudo apt-get install -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
