Install colordiff in Travis
It doesn't super matter but will make for nicer job logs in case of
failure.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ dist: trusty
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq faketime
+  - sudo apt-get install -qq colordiff
 script: ./test/run-tests.sh
