--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq faketime
   - sudo apt-get install -qq colordiff
-script: ./test/run-tests.sh
+  - sudo apt-get install -qq devscripts
+script: ./test/run-tests.sh && checkbashisms --newline --extra filter-other-days
