Run brew with the macOS system Ruby
Otherwise it complains because the default Ruby chosen is 2.0, which
is too old.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ addons:
     - colordiff
     - devscripts
 install:
-  - if [ $TRAVIS_OS_NAME == osx ]; then brew install libfaketime; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then rvm use system && brew install libfaketime; fi
 script: ./test/run-tests.sh && sudo apt-get install -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
