--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Git: https://github.com/strugee/filter-other-days.git
 Vcs-Browser: https://github.com/strugee/filter-other-days
 
 Package: filter-other-days
-Architecture: any
+Architecture: all
 Description: filter logfiles for today's date in an Artificial Ignorance-compatible way
  filter-other-days filters logfiles for today's date in an Artificial \
  Ignorance-compatible way. That means it throws away entries that it's
