--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: none
 dist: trusty
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq faketime
   - sudo apt-get install -qq colordiff
   - sudo apt-get install -qq devscripts
   - sudo apt-get install -qq debhelper
-script: ./test/run-tests.sh && sudo apt-get remove -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
+script: ./test/run-tests.sh && sudo apt-get install -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
