--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ addons:
     - colordiff
     - devscripts
 install:
-script: ./test/run-tests.sh && if [ $TRAVIS_OS_NAME = osx ]; then travis_terminate; fi && sudo apt-get remove -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
+script: ./test/run-tests.sh && if [ $TRAVIS_OS_NAME = osx ]; then travis_terminate 0; fi && sudo apt-get remove -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
