--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ addons:
     - colordiff
     - devscripts
     - fakeroot
+    - debhelper
 install:
 script: ./test/run-tests.sh && if [ $TRAVIS_OS_NAME = osx ]; then travis_terminate 0; fi && sudo apt-get remove -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
