--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,6 +1,9 @@
 freebsd_instance:
   image: freebsd-11-2-release-amd64
 
+freebsd_instance:
+  image: freebsd-12-0-release-amd64
+
 task:
   install_script: pkg install -y libfaketime colordiff bash
   script: ./test/run-tests.sh
