Set $GNUPGHOME in reprotest explicitly
reprotest will set ~ to a nonexistant directory and this crashes
GPG. So, override just GPG's home so the key import works.

--- a/.drone.yml
+++ b/.drone.yml
@@ -12,5 +12,5 @@ steps:
       - apt-get update
       - DEBIAN_FRONTEND=noninteractive apt-get -qq install reprotest
       - patch release.sh misc/drone-release.patch
-      - reprotest -s . ./release.sh "filter-other-days_.tar filter-other-days_.tar.gz filter-other-days_.tar.xz"
+      - reprotest -s . "GNUPGHOME=$(pwd)/.gnupg ./release.sh" "filter-other-days_.tar filter-other-days_.tar.gz filter-other-days_.tar.xz"
 
