--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ script:
   - checkbashisms --newline --posix --extra filter-other-days
   - dpkg-buildpackage
   - lintian --pedantic ../filter-other-days_*_all.deb
-  # Reprotest
-  - docker run --privileged --mount type=bind,source=$(pwd),destination=/mnt -w /mnt ubuntu:latest sh -c 'apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -qq install reprotest && patch release.sh misc/travis-release.patch && reprotest -s . "export GNUPGHOME=$(pwd)/.gnupg; ./release.sh; rm -r \$GNUPGHOME" "filter-other-days_.tar filter-other-days_.tar.gz filter-other-days_.tar.xz"'
+  # reprotest
+  - docker run --privileged --mount type=bind,source=$(pwd),destination=/mnt -w /mnt ubuntu:latest sh -c 'apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -qq install git reprotest && patch release.sh misc/travis-release.patch && reprotest -s . "export GNUPGHOME=$(pwd)/.gnupg; ./release.sh; rm -r \$GNUPGHOME" "filter-other-days_.tar filter-other-days_.tar.gz filter-other-days_.tar.xz"'
