Dump dpkg debugging information

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ addons:
     - debhelper
     - lintian
 install:
-script: ./test/run-tests.sh && if [ $TRAVIS_OS_NAME = osx ]; then travis_terminate 0; fi && sudo apt-get remove -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
+script: dpkg --get-selections; ./test/run-tests.sh && if [ $TRAVIS_OS_NAME = osx ]; then travis_terminate 0; fi && sudo apt-get remove -qq faketime && ./test/run-tests.sh && checkbashisms --newline --posix --extra filter-other-days && dpkg-buildpackage && lintian --pedantic ../filter-other-days_*_all.deb
